[metadata]
name = delato
summary = Incidence Tracking System
description-file =
    README.md
author = Pablo Orviz Fernandez
author-email = pablo.orviz@gmail.com
home-page = 
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    delato

[entry_points]

console_scripts =
    achus-report = delato.main:main
